--- a/package.json
+++ b/package.json
@@ -5,5 +5,13 @@
   "main": "index.js",
   "repository": "git@github.com:CodingItWrong/react-tdd-livestream.git",
   "author": "Josh Justice <me@codingitwrong.com>",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
+  },
+  "scripts": {
+    "start": "parcel index.html"
+  }
 }
