--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "author": "Josh Justice <me@codingitwrong.com>",
   "license": "Apache-2.0",
   "devDependencies": {
+    "cypress": "^4.1.0",
     "parcel-bundler": "^1.12.4",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
   },
   "scripts": {
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "e2e": "cypress open"
   }
 }
