--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "cross-env": "^7.0.0",
     "jest": "^25.1.0",
+    "react-materialize": "^3.5.9",  
     "st": "^2.0.0"
   },
   "jest": {
