--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cross-env": "^7.0.0",
     "jest": "^25.1.0",
     "react-materialize": "^3.5.9",
+    "run-p": "^0.0.0",
     "st": "^2.0.0"
   },
   "jest": {
