--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,5 +22,4 @@ jobs:
           paths:
             - ~/.cache ## cache both yarn and Cypress!
       - run: yarn test:u
-      - run: npm install -g wait-on
-      - run: npm run ci
+      - run: yarn ci
