--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "cross-env": "^7.0.0",
+    "formik": "^2.1.4",
     "jest": "^25.1.0",
     "react-materialize": "^3.5.9",
     "run-p": "^0.0.0",
